# new_ring

./: .gitignore  CMakeLists.txt  Readme.md  automated_test.py  build_run_wikidata.sh  index_build_process_wikipedia_filtered.txt  index_build_process_wikipedia_full.txt  index_query_process_wikipedia_filtered.txt  index_query_process_wikipedia_filtered_best_gao_all_cyclical_ring_muthu.txt  index_query_process_wikipedia_full.txt  query_run_wikidata.sh  run_automated_test_wikidata_filtered.sh  run_automated_test_wikidata_filtered_1000_600.sh  run_automated_test_wikidata_filtered_5000_1200.sh  run_automated_test_wikidata_filtered_print_gao.sh  run_automated_test_wikidata_full.sh  run_automated_test_wikidata_full_1000_600.sh  run_automated_test_wikidata_full_500000_1200.sh  run_automated_test_wikidata_full_50000_1200.sh  run_automated_test_wikidata_full_print_gao.sh  tmp_S2_query_num36_wikidata-filtered-enumerated.txt  tmp_S2_query_num9_wikidata-filtered-enumerated.txt
Queries/: Queries-bgps-limit1000.txt  Queries-bgps-limit1000_URING_segfault_with_P_var.txt  Queries-bgps-limit1000_dash.txt  Queries-bgps-limit1000_removing_all_with_no_GAO_in_RING.txt  Queries-bgps_best_performance_timeouts_in_secs.txt  Queries-bgps_best_performance_timeouts_in_secs_type3.txt  Queries-wikidata-benchmark-s1.txt  Queries-wikidata-benchmark-s2.txt  Queries-wikidata-benchmark-s3.txt  Queries-wikidata-benchmark-s4.txt  Queries-wikidata-benchmark-tr1.txt  Queries-wikidata-benchmark-tr2.txt  Queries-wikidata-benchmark_all_cyclical.txt  Queries-wikidata-benchmark_dash.txt  Queries-wikidata-benchmark_with_types.ods
experiment_output/: compactLTJ_out.csv  issue_analysis_backward_adaptive.ods  one_ring_muthu_leap_gao.txt  sigmod21_gao.txt  tmp_backward_only_adaptive_muthu_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_adaptive_muthu_wikidata.nt.enumerated.ring_1000_600.csv  tmp_backward_only_adaptive_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_adaptive_wikidata.nt.enumerated.ring_1000_600.csv  tmp_backward_only_leap_adaptive_muthu_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_leap_muthu_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_leap_muthu_wikidata.nt.enumerated.ring_1000_600.csv  tmp_backward_only_leap_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_muthu_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_muthu_wikidata.nt.enumerated.ring_1000_600.csv  tmp_backward_only_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_backward_only_wikidata.nt.enumerated.ring_1000_600.csv  tmp_one_ring_muthu_leap_adaptive_wikidata-filtered-enumerated.dat.ring_1000_600.csv  tmp_one_ring_muthu_leap_adaptive_wikidata-filtered.nt.sorted.enumerated.ring_1000_600.csv  tmp_one_ring_muthu_leap_adaptive_wikidata.nt.enumerated.ring_1000_600.csv  tmp_one_ring_muthu_leap_wikidata-filtered-enumerated.dat.ring_1000_600.csv  (+9 more)
include/: bwt.hpp  gao.hpp  (+12 more)
(+82 files in other folders)
